--- a/English/.obsidian/app.json
+++ b/English/.obsidian/app.json
@@ -3,5 +3,12 @@
   "strictLineBreaks": false,
   "propertiesInDocument": "visible",
   "showLineNumber": false,
-  "readableLineLength": true
+  "readableLineLength": true,
+  "pdfExportSettings": {
+    "includeName": true,
+    "pageSize": "A4",
+    "landscape": false,
+    "margin": "0",
+    "downscalePercent": 90
+  }
 }
