--- a/English/.obsidian/appearance.json
+++ b/English/.obsidian/appearance.json
@@ -4,6 +4,8 @@
   "translucency": false,
   "textFontFamily": "Nunito",
   "enabledCssSnippets": [
+    "print",
+    "match_vscode",
     "size-for-content"
   ],
   "cssTheme": ""
